<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoveDetect</string>
    <string name="action_settings">Settings</string>
    <string name="label_x_axis">X-Axis:</string>
    <string name="label_y_axis">Y-Axis:</string>
    <string name="label_z_axis">Z-Axis:</string>
    <string name="value_default">0.0</string>
	<string name="SeeAxis">SeeAxis</string>
	<string name="About">About</string>
	<string name="Exit">Exit</string>
	<string name="MoveX">MoveX</string>
	<string name="MoveY">MoveY</string>
	<string name="Return">Return</string>


</resources>
