<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MySensorActivity" 
    android:background="#88666666" >
     
    <TextView
        android:id="@+id/txt2"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"/>
        <TextView
        android:id="@+id/txt4"
        android:textSize="15sp"
        android:layout_above="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"/>


      <Button
          android:id="@+id/button1"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_above="@+id/button2"
          android:layout_alignParentStart="true"
          android:text="@string/SeeAxis" />

    
      <Button
          android:id="@+id/button2"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_above="@+id/button3"
          android:layout_alignParentStart="true"
          android:text="@string/About" />

      <Button
          android:id="@+id/button3"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:text="@string/Exit" />

      <CheckBox
          android:id="@+id/checkBox1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/button1"
          android:layout_alignParentRight="true"
          android:layout_marginRight="18dp"
          android:text="@string/MoveY" />

      <CheckBox
          android:id="@+id/checkBox2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/checkBox1"
          android:layout_alignParentLeft="true"
          android:text="@string/MoveX" />

      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/checkBox1"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/txt2"
          android:layout_marginTop="29dp" 
          android:background="#000000">
              <com.example.movedetect.BallPanel
          		android:id="@+id/ball"
          		android:layout_width="fill_parent"
          		android:layout_height="fill_parent"
          		android:layout_alignParentLeft="true"
          		android:visibility="visible" 
          		>

			</com.example.movedetect.BallPanel>

      </RelativeLayout>
    
</RelativeLayout>